@@ -2,7 +2,6 @@ TODO:
 
 file systems:
 * Minix (planned)
-* romfs
 * FAT
 * NTFS
 
